# model-routing-table

./: README.md  pyproject.toml
model_routing_table/: __init__.py  table.py
